# watson-worktime

./: LICENSE  README.adoc  pyproject.toml
watson_worktime/: config.py  console.py  data.py
