[tool.poetry]
name = "watson-worktime"
version = "0.1.0"
description = ""
authors = ["Daniel Schadt <kingdread@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
holidays = "^0.22"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
watson-worktime = 'watson_worktime.console:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
